{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 332,
  "lineage": "cdcde7aa-998a-21a6-4f07-bc5358bbd029",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-065340573fd0411c3",
            "public_dns": "ec2-35-169-194-51.compute-1.amazonaws.com",
            "public_ip": "35.169.194.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00df0def40c08f169",
            "public_dns": "ec2-54-204-248-17.compute-1.amazonaws.com",
            "public_ip": "54.204.248.17",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d8b5222f2b93bf0",
            "arn": "arn:aws:ec2:us-east-1:034519235875:instance/i-01e06cfc2c322fb71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s2_full_access_role",
            "id": "i-01e06cfc2c322fb71",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0414e92beb4d74a1d",
            "private_dns": "ip-10-0-0-150.ec2.internal",
            "private_ip": "10.0.0.150",
            "public_dns": "ec2-52-90-1-223.compute-1.amazonaws.com",
            "public_ip": "52.90.1.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d35e8fde06643de0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064b22fc5a9a8ff8b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4f6c62f1fcb88b0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.s2_full_access_role",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:internet-gateway/igw-0f2de461a0600996a",
            "id": "igw-0f2de461a0600996a",
            "owner_id": "034519235875",
            "tags": {
              "Name": "ig"
            },
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065340573fd0411c3",
            "id": "nat-08bed1664dda31844",
            "network_interface_id": "eni-09bf972ba1f40b98c",
            "private_ip": "10.0.0.240",
            "public_ip": "35.169.194.51",
            "subnet_id": "subnet-064b22fc5a9a8ff8b",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07fe50c3bfc40038e",
            "owner_id": "034519235875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2de461a0600996a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee495aa18a49c94b",
            "owner_id": "034519235875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08bed1664dda31844",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table2"
            },
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt_to_prv_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054aaedc9a68739ee",
            "route_table_id": "rtb-0ee495aa18a49c94b",
            "subnet_id": "subnet-0196d7cce64fa8e99"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table2",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt_to_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd6bce6a4d235c96",
            "route_table_id": "rtb-07fe50c3bfc40038e",
            "subnet_id": "subnet-064b22fc5a9a8ff8b"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:security-group/sg-09ef267e3388f1554",
            "description": "Allow SSH and Apache2 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ef267e3388f1554",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4f6c62f1fcb88b0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4f6c62f1fcb88b0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": null,
            "owner_id": "034519235875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:security-group/sg-0d4f6c62f1fcb88b0",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f6c62f1fcb88b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": null,
            "owner_id": "034519235875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:subnet/subnet-0196d7cce64fa8e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0196d7cce64fa8e99",
            "map_public_ip_on_launch": false,
            "owner_id": "034519235875",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:subnet/subnet-064b22fc5a9a8ff8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-064b22fc5a9a8ff8b",
            "map_public_ip_on_launch": false,
            "owner_id": "034519235875",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0dfa36f4c63282925"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:vpc/vpc-0dfa36f4c63282925",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc78ff73f032b2d7",
            "default_route_table_id": "rtb-05a6ad47cff437883",
            "default_security_group_id": "sg-03faad656fee7256a",
            "dhcp_options_id": "dopt-025618b4f633dd296",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dfa36f4c63282925",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a6ad47cff437883",
            "owner_id": "034519235875",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}